# Python-for-Data-Science

./: .gitignore  LICENSE  README.md  pyproject.toml
01-Python-Basics/: README.md
01-Python-Basics/notebooks/: .gitkeep
02-Python-Data-Structures/: README.md
03-Python-Programming-Fundamentals/: README.md
04-Working-with-Data/: README.md
05-APIs-and-Data-Collection/: README.md
data/: .gitkeep
